# Capstone-Mesh-Newtwork

./: .gitignore  README.md
firmware/repeater/: repeater.ino
firmware/sensor/: sensor.ino
firmware/sink_wio/: receiver_wio.ino
host/receiver_pi/: CMakeLists.txt  receiver.cpp
reciver/: reciver.cpp
repeter/: repeter.ino
sensor/: sensor.ino
